--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project (Tutorials)
 
 set(CMAKE_CXX_STANDARD 11)
 
+find_package(PkgConfig)
+
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glfw3 3.3 REQUIRED)
@@ -27,9 +29,15 @@ add_executable(tutorial02_reactangle01
 	tutorial02_reactangle/rectangle01.cpp
 )
 
+# Tutorial  Exercise
+add_executable(exercise
+	exercise/drawRectangle.cpp
+)
+
 
 target_link_libraries(tutorial01_first_window ${ALL_LIBRARIES} OpenGL::GL OpenGL::GLU OpenGL::OpenGL OpenGL::EGL GLEW::glew glfw)
 target_link_libraries(tutorial02_helloworld ${ALL_LIBRARIES} OpenGL::GL OpenGL::GLU OpenGL::OpenGL OpenGL::EGL GLEW::glew glfw)
 target_link_libraries(tutorial02_reactangle01 ${ALL_LIBRARIES} OpenGL::GL OpenGL::GLU OpenGL::OpenGL OpenGL::EGL GLEW::glew glfw)
+target_link_libraries(exercise ${ALL_LIBRARIES} OpenGL::GL OpenGL::GLU OpenGL::OpenGL OpenGL::EGL GLEW::glew glfw)
 
 
